// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconPrint should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-print "
  height={24}
  viewBox="0 0 24 24"
  width={24}
>
  <path
    className="fill-color"
    d="M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z"
    fill="#000"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconPrint should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-print test"
  height={100}
  title="title"
  viewBox="0 0 24 24"
  width={200}
>
  <path
    className="fill-color"
    d="M19 8H5c-1.66 0-3 1.34-3 3v6h4v4h12v-4h4v-6c0-1.66-1.34-3-3-3zm-3 11H8v-5h8v5zm3-7c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm-1-9H6v4h12V3z"
    fill="#222"
  />
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
</AccessibleSVG>
`;
